--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ i {
 
 .btn {
     background-color: rgb(84 226 28);
+    background-color: #00ed64;
     padding: 10px;
     font-weight: bold;
     margin: 5px;
@@ -80,6 +81,7 @@ i {
 
 h1 {
     background-color: rgb(0 255 12);
+    background-color: #00ed64;
     margin-bottom: 4%;
 }
 h2 {
